Retry deploy settings

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cities-flashcards",
-  "homepage": "https://github.com/solowave/cities-flashcards",
+  "homepage": "https://solowave.github.io/cities-flashcards/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
